tests/errors/print_extra_args.orus
fn main() {
print("Hello {}", "world", 1)
}
